# networkReliability

./: .gitignore  CMakeLists.txt  dodecahedron.gephi  dodecahedronReordered.graphml  networkReliability.sln
ExhaustiveFunction/: CMakeLists.txt  exhaustiveFunction.cpp  formulaDriver.cpp  formulaScanner.ll
ExhaustiveFunctionEvaluate/: CMakeLists.txt  exhaustiveFunctionEvaluate.cpp
ExhaustiveFunctionSearch/: CMakeLists.txt  exhaustiveFunction.cpp  formulaDriver.h
ExhaustiveProbability/: CMakeLists.txt  ExhaustiveProbability.vcxproj  main.cpp
ExhaustiveSearch/: CMakeLists.txt  ExhaustiveSearch.vcxproj  main.cpp
PMC/: PMC.vcxproj  PMC.vcxproj.filters  pmc.cpp
RPackage/: CMakeLists.txt  DESCRIPTION  NAMESPACE  buildRData.cmake  generateData.R
RPackage/R/: approximateZeroVariance.R  classes.R  crudeMC.R  (+10 more)
RPackage/src/networkReliability/: CMakeLists.txt  approximateZeroVariance.cpp  approximateZeroVariance.h  approximateZeroVarianceFearnhead.cpp  approximateZeroVarianceFearnhead.h  approximateZeroVarianceWOR.cpp  approximateZeroVarianceWOR.h  approximateZeroVarianceWORMerge.cpp  approximateZeroVarianceWORMerge.h  approximateZeroVarianceWORMergeWithVariance.cpp  approximateZeroVarianceWORMergeWithVariance.h  approximateZeroVarianceWORWithVariance.cpp  approximateZeroVarianceWORWithVariance.h  convertGraph.cpp  convertGraph.h  convertGraphAM.cpp  convertGraphIGraph.cpp  convertGraphNEL.cpp  createContext.cpp  createContext.h  crudeMC.cpp  crudeMC.h  exhaustiveProbability.cpp  exhaustiveProbability.h  exhaustiveSearch.cpp  exhaustiveSearch.h  register.cpp  residualResampling.cpp  residualResampling.h  setDefaultPrec.cpp  setDefaultPrec.h
Simulations/: .gitignore  generateScenarios.R  jobScript.R  producePlots.R  produceTables.R  submitJobsSlurm.R  submitJobsTorque.R  submitScriptSlurm.sh  submitScriptTorque.sh  summarise.R  underestimationPlots.R
SimulationsWithVariance/: .gitignore  generateScenarios.R  jobScript.R  producePlots.R  producePlotsFast.R  producePlotsSlow.R  producePlotsSlow.sh  submitScriptSlurm.sh
Turnip/: CMakeLists.txt  Turnip.vcxproj  turnip.cpp
approximateZeroVariance/: CMakeLists.txt  approximateZeroVariance.cpp
cmake/: FindGraphViz.cmake
copyBinary/: CMakeLists.txt
copyText/: CMakeLists.txt
crudeMC/: CMakeLists.txt  crudeMC.cpp  crudeMC.vcxproj  crudeMC.vcxproj.filters
crudeMCConditional/: CMakeLists.txt  crudeMCConditional.cpp  crudeMCConditional.vcxproj  crudeMCConditional.vcxproj.filters
crudeMCConditionalFunction/: CMakeLists.txt  crudeMCConditionalFunction.cpp
empiricalFunction/: CMakeLists.txt  empiricalFunction.cpp
generateGrid/: CMakeLists.txt  generateGrid.cpp  generateGrid.vcxproj  generateGrid.vcxproj.filters
importanceResampling/: CMakeLists.txt  importanceResampling.cpp
methods/: CMakeLists.txt  approximateZeroVarianceFearnheadImpl.cpp  approximateZeroVarianceFearnheadImpl.h  approximateZeroVarianceImpl.cpp  approximateZeroVarianceImpl.h  approximateZeroVarianceWORImpl.cpp  approximateZeroVarianceWORImpl.h  approximateZeroVarianceWORMergeImpl.cpp  approximateZeroVarianceWORMergeImpl.h  approximateZeroVarianceWORMergeWithVarianceImpl.cpp  approximateZeroVarianceWORMergeWithVarianceImpl.h  approximateZeroVarianceWORWithVarianceImpl.cpp  approximateZeroVarianceWORWithVarianceImpl.h  crudeMCImpl.cpp  crudeMCImpl.h  exhaustiveProbabilityImpl.cpp  exhaustiveProbabilityImpl.h  exhaustiveSearchImpl.cpp  exhaustiveSearchImpl.h  residualResamplingImpl.cpp  residualResamplingImpl.h
networkReliabilityCommon/: Arguments.cpp  Arguments.h  ArgumentsMPFR.cpp  ArgumentsMPFR.h  ArgumentsMPIR.cpp  ArgumentsMPIR.h  CMakeLists.txt  Context.cpp  Context.h  EdgeState.h  NetworkReliabilityObs.cpp  NetworkReliabilityObs.h  NetworkReliabilityObsCollection.cpp  NetworkReliabilityObsCollection.h  NetworkReliabilityObsTree.cpp  NetworkReliabilityObsTree.h  NetworkReliabilitySubObs.cpp  NetworkReliabilitySubObs.h  NetworkReliabilitySubObsCollection.cpp  NetworkReliabilitySubObsCollection.h  NetworkReliabilitySubObsTree.cpp  NetworkReliabilitySubObsTree.h  Turnip.cpp  Turnip.h  ZoomGraphicsView.cpp  ZoomGraphicsView.h  arguments.cpp  arguments.h  argumentsMPFR.cpp  argumentsMPFR.h  astCode.hpp  binaryDataSet.cpp  binaryDataSet.h  commonOptions.cpp  commonOptions.h  computeConditionalProb.cpp  computeConditionalProb.h  conditionalPMC.cpp  conditionalPMC.h  conditionalTurnip.cpp  (+40 more)
networkReliabilityCommon/obs/: basic.cpp  basic.h  getSubObservation.hpp  withImportanceResampling.cpp  withImportanceResampling.h  withResampling.cpp  withResampling.h  withSub.cpp  withSub.h
networkReliabilityCommon/subObs/: basic.cpp  basic.h  getObservation.hpp  subObs.cpp  subObs.h  withImportanceResampling.cpp  withImportanceResampling.h  withResampling.cpp  withResampling.h
observationVisualiser/: .gitignore  CMakeLists.txt  ObservationVisualiser.cpp  ObservationVisualiser.h  main.cpp  observationVisualiser.cpp  observationVisualiser.h  observationVisualiser.pro  observationVisualiser.vcxproj  observationVisualiser.vcxproj.filters
resampling/: CMakeLists.txt  resampling.cpp
resamplingExhaustive/: CMakeLists.txt  resamplingExhaustive.cpp
resamplingPMC/: CMakeLists.txt  resamplingPMC.cpp
splitting/: CMakeLists.txt  main.cpp  splitting.vcxproj
splittingVisualiser/: CMakeLists.txt  main.cpp  splittingVisualiser.cpp  splittingVisualiser.h  splittingVisualiser.pro  splittingVisualiser.vcxproj  splittingVisualiser.vcxproj.filters
subObservationVisualiser/: CMakeLists.txt  main.cpp  subObservationStatusBar.cpp  subObservationStatusBar.h  subObservationVisualiser.cpp  subObservationVisualiser.h  subObservationVisualiserBase.cpp  subObservationVisualiserBase.h  subObservationVisualiserCollection.cpp  subObservationVisualiserCollection.h  subObservationVisualiserSingle.cpp  subObservationVisualiserSingle.h  subObservationVisualiserTree.cpp  subObservationVisualiserTree.h  treeVisualiserFrame.cpp  treeVisualiserFrame.h
turnip/: CMakeLists.txt  turnip.cpp
turnipConditional/: turnipConditional.cpp  turnipConditional.vcxproj  turnipConditional.vcxproj.filters
(+16 files in other folders)
