cmake_minimum_required(VERSION 3.1)
add_executable(exhaustiveSearch main.cpp)
target_link_libraries(exhaustiveSearch PUBLIC networkReliabilityCommon mpfr)
target_link_libraries(exhaustiveSearch PUBLIC ${Boost_LIBRARIES})
target_compile_options(exhaustiveSearch PRIVATE ${OpenMP_CXX_FLAGS})
get_target_property(TMP exhaustiveSearch LINK_FLAGS)
if(${TMP} STREQUAL TMP-NOTFOUND)
	set(TMP ${OpenMP_CXX_FLAGS})
else()
	set(TMP "${TMP} ${OpenMP_CXX_FLAGS}")
endif()
set_target_properties(exhaustiveSearch PROPERTIES LINK_FLAGS ${TMP})
