cmake_minimum_required(VERSION 3.1)
add_executable(exhaustiveSearch main.cpp)
target_link_libraries(exhaustiveSearch PUBLIC networkReliabilityCommon mpfr)
target_compile_options(exhaustiveSearch PRIVATE ${OpenMP_CXX_FLAGS})
target_compile_definitions(exhaustiveSearch PUBLIC BOOST_ALL_NO_LIB BOOST_ALL_DYN_LINK)
get_target_property(TMP exhaustiveSearch LINK_FLAGS)
if(${TMP} STREQUAL TMP-NOTFOUND)
	set(TMP ${OpenMP_CXX_FLAGS})
else()
	set(TMP "${TMP} ${OpenMP_CXX_FLAGS}")
endif()
set_target_properties(exhaustiveSearch PROPERTIES LINK_FLAGS ${TMP})
if(WIN32)
	set_target_properties(exhaustiveSearch PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/x64/ PDB_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/x64/)
endif()
