cmake_minimum_required(VERSION 3.1)
add_executable(approximateZeroVariance approximateZeroVariance.cpp)
target_link_libraries(approximateZeroVariance PUBLIC networkReliabilityCommon mpfr)
target_compile_definitions(approximateZeroVariance PUBLIC BOOST_ALL_NO_LIB BOOST_ALL_DYN_LINK)
if(WIN32)
	set_target_properties(approximateZeroVariance PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/x64/ PDB_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/x64/)
endif()
