cmake_minimum_required(VERSION 3.1)
set(CppFiles crudeMCImpl.cpp approximateZeroVarianceImpl.cpp exhaustiveSearchImpl.cpp exhaustiveProbabilityImpl.cpp approximateZeroVarianceWORImpl.cpp approximateZeroVarianceWORWithVarianceImpl.cpp approximateZeroVarianceFearnheadImpl.cpp approximateZeroVarianceWORMergeImpl.cpp residualResamplingImpl.cpp approximateZeroVarianceWORMergeWithVarianceImpl.cpp)
set(HeaderFiles crudeMCImpl.h approximateZeroVarianceImpl.h exhaustiveSearchImpl.h exhaustiveProbabilityImpl.h approximateZeroVarianceWORImpl.h approximateZeroVarianceWORWithVarianceImpl.h approximateZeroVarianceFearnheadImpl.h approximateZeroVarianceWORMergeImpl.h residualResamplingImpl.h approximateZeroVarianceWORMergeWithVarianceImpl.h)

add_library(methods STATIC ${CppFiles} ${HeaderFiles})
target_link_libraries(methods PUBLIC networkReliabilityCommon sampling)
target_include_directories(methods PUBLIC ${PROJECT_SOURCE_DIR}/methods)
set_target_properties(methods PROPERTIES COMPILE_FLAGS ${OpenMP_CXX_FLAGS} LINK_FLAGS ${OpenMP_CXX_FLAGS})
if(WIN32)
	set_target_properties(methods PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/x64/ PDB_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/x64/)
else()
	target_compile_options(methods PUBLIC "-fPIC")
endif()
