if(Qt5_FOUND AND WIN32)
	qt5_wrap_cpp(observationVisualiser_MOC_SOURCES ObservationVisualiser.h)
	add_executable(observationVisualiser main.cpp ObservationVisualiser.cpp ObservationVisualiser.h ${observationVisualiser_MOC_SOURCES})
	set_target_properties(observationVisualiser PROPERTIES LINK_FLAGS "/SUBSYSTEM:windows" RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/x64/ PDB_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/x64/)
	target_link_libraries(observationVisualiser PUBLIC Qt5::Core Qt5::Gui Qt5::Widgets)
	target_link_libraries(observationVisualiser PUBLIC networkReliabilityCommon mpfr)
	target_include_directories(observationVisualiser PUBLIC ${Boost_INCLUDE_DIRS})
	target_compile_definitions(observationVisualiser PUBLIC BOOST_ALL_NO_LIB BOOST_ALL_DYN_LINK)
endif()
