if(Qt5_FOUND)
	qt5_wrap_cpp(observationVisualiser_MOC_SOURCES observationVisualiser.h)
	add_executable(observationVisualiser main.cpp observationVisualiser.cpp observationVisualiser.h ${observationVisualiser_MOC_SOURCES})
	target_link_libraries(observationVisualiser PUBLIC Qt5::Core Qt5::Gui Qt5::Widgets)
	if(WIN32)
		set_target_properties(observationVisualiser PROPERTIES LINK_FLAGS "/SUBSYSTEM:windows" RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/x64/ PDB_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/x64/)
		target_link_libraries(observationVisualiser PUBLIC Qt5::WinMain)
	endif()
	target_link_libraries(observationVisualiser PUBLIC networkReliabilityCommon mpfr)
	target_include_directories(observationVisualiser PUBLIC ${Boost_INCLUDE_DIRS})
	target_compile_definitions(observationVisualiser PUBLIC BOOST_ALL_NO_LIB BOOST_ALL_DYN_LINK)
endif()
