cmake_minimum_required(VERSION 3.1)
find_package(aliasMethod REQUIRED)
add_executable(resamplingPMC resamplingPMC.cpp)
target_link_libraries(resamplingPMC PUBLIC networkReliabilityCommon mpfr aliasMethod)
target_compile_definitions(resamplingPMC PUBLIC BOOST_ALL_NO_LIB BOOST_ALL_DYN_LINK)
if(WIN32)
	set_target_properties(resamplingPMC PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/x64/ PDB_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/x64/)
endif()
