if(Qt5_FOUND)
	qt5_wrap_cpp(splittingVisualiser_MOC_SOURCES splittingVisualiser.h)
	add_executable(splittingVisualiser splittingVisualiser.cpp splittingVisualiser.h main.cpp ${splittingVisualiser_MOC_SOURCES})
	if(WIN32)
		set_target_properties(splittingVisualiser PROPERTIES LINK_FLAGS "/SUBSYSTEM:windows" RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/x64/ PDB_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/x64/)
	endif()
	target_link_libraries(splittingVisualiser PUBLIC Qt5::Core Qt5::Gui Qt5::Widgets)
	if(WIN32)
		target_link_libraries(splittingVisualiser PUBLIC Qt5::WinMain)
	endif()
	target_link_libraries(splittingVisualiser PUBLIC networkReliabilityCommon mpfr)
	target_include_directories(splittingVisualiser PUBLIC ${Boost_INCLUDE_DIRS})
	target_compile_definitions(splittingVisualiser PUBLIC BOOST_ALL_NO_LIB BOOST_ALL_DYN_LINK)
endif()

