cmake_minimum_required(VERSION 3.1)
set(HeaderFiles convertGraph.h crudeMC.h createContext.h approximateZeroVariance.h exhaustiveSearch.h setDefaultPrec.h exhaustiveProbability.h approximateZeroVarianceWOR.h approximateZeroVarianceWORWithVariance.h approximateZeroVarianceFearnhead.h approximateZeroVarianceWORMerge.h residualResampling.h)
set(CppFiles convertGraphAM.cpp convertGraph.cpp convertGraphIGraph.cpp convertGraphNEL.cpp register.cpp crudeMC.cpp createContext.cpp approximateZeroVariance.cpp exhaustiveSearch.cpp setDefaultPrec.cpp exhaustiveProbability.cpp approximateZeroVarianceWOR.cpp approximateZeroVarianceWORWithVariance.cpp approximateZeroVarianceFearnhead.cpp approximateZeroVarianceWORMerge.cpp residualResampling.cpp)
add_library(networkReliabilityRPackage SHARED ${CppFiles} ${HeaderFiles})
target_link_libraries(networkReliabilityRPackage PUBLIC networkReliabilityCommon Rcpp methods)
set_target_properties(networkReliabilityRPackage PROPERTIES OUTPUT_NAME "networkReliability")
target_compile_definitions(networkReliabilityRPackage PRIVATE CUSTOM_STATIC_RCPP)

if(WIN32)
	target_compile_definitions(networkReliabilityRPackage PUBLIC _CRT_SECURE_NO_WARNINGS)
	target_link_libraries(networkReliabilityRPackage PRIVATE "${CMAKE_BINARY_DIR}/RPackage/R.lib")
	foreach(BUILD_TYPE IN LISTS CMAKE_CONFIGURATION_TYPES)
		string(TOUPPER "${BUILD_TYPE}" UPPER_BUILD_TYPE)
		if(CMAKE_SIZEOF_VOID_P EQUAL 8)
			set_target_properties(networkReliabilityRPackage PROPERTIES RUNTIME_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/inst/libs/x64 PDB_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/inst/libs/x64)
		else()
			set_target_properties(networkReliabilityRPackage PROPERTIES RUNTIME_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/inst/libs/i386 PDB_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/RPackage/${BUILD_TYPE}/inst/libs/i386)
		endif()
	endforeach()
else()
	set_target_properties(networkReliabilityRPackage PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/RPackage/src)
	set_target_properties(networkReliabilityRPackage PROPERTIES PREFIX "")
endif()
